--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,10 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile("junit:junit")
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.postgresql:postgresql:42.2.2"
+    compile "org.fasterxml.jackson.core:jackson-databind"
+    testCompile "org.springframework.boot:spring-boot-starter-test"
+    testCompile "junit:junit"
 }
