--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name="Order Service"
 
 server.port=${SERVER_PORT}
 
-spring.datasource.url=jdbc:postgresql://"${POSTGRES_HOST}":"${POSTGRES_PORT}"/orders?currentSchema=public
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/order-service?createDatabaseIfNotExist=true
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
