--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.postgresql:postgresql:42.2.2"
-    compile "org.fasterxml.jackson.core:jackson-databind"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.9.5"
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile "junit:junit"
 }
