--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ targetCompatibility = 1.8
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.springframework.data:spring-data-rest-webmvc:3.0.6.RELEASE"
     compile "org.postgresql:postgresql:42.2.2"
     compile "com.fasterxml.jackson.core:jackson-databind:2.9.5"
     testCompile "org.springframework.boot:spring-boot-starter-test"
